Add tests/env make target
This gives us an environment for testing

--- a/default_tests.env
+++ b/default_tests.env
@@ -1,5 +1,5 @@
 ASPEN_THREAD_POOL=10
-REDIS_URL=redis://localhost/shields.io
+REDIS_URL=redis://localhost/shields.io-test
 
 SHIELDS_IO_MAX_AGE=60
 SHIELDS_IO_PNG_DATA_TIMEOUT=7776000
