--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 before_script:
  - make
+ - git submodule init
+ - git submodule update
+ - cd vendor/shielded && npm install && cd ../..
  - ./env/bin/pip install pytest
 script: cd tests && ../env/bin/py.test
 notifications:
