Sequence the continuations in order.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "CC0",
   "dependencies": {
     "dot": ">=1.0.2",
-    "svgo": "~0.4.2"
+    "svgo": "~0.4.2",
+    "es6-promise": "~0.1.1"
   }
 }
