--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "license": "CC0",
   "dependencies": {
-    "dot": ">=1.0.2",
+    "dot": "~1.0.2",
     "svgo": "~0.4.2",
     "canvas": "~1.1.2",
+    "phantomjs": "~1.9.2-6",
     "es6-promise": "~0.1.1",
     "camp": "~13.11.9"
   },
