Travis: install cairo.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+before_install: sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
 language: node_js
 node_js:
   - 0.10
