--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "canvas": "~1.1.2",
     "phantomjs": "~1.9.2-6",
     "es6-promise": "~0.1.1",
+    "request": "~2.34.0",
     "camp": "~13.11.9"
   },
   "devDependencies": {
