Using Redis to store analytics on Heroku.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phantomjs": "~1.9.2-6",
     "es6-promise": "~0.1.1",
     "request": "~2.34.0",
+    "redis": "~0.10.1",
     "camp": "~13.11.9"
   },
   "devDependencies": {
