--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "request": "~2.34.0",
     "redis": "~0.10.1",
     "camp": "~13.11.9",
-    "semver": "~2.3.0"
+    "semver": "~2.3.0",
+    "js-yaml": "~2.1.3",
+    "whet.extend": "~0.9.9",
+    "sax": "~0.6.0"
   },
   "devDependencies": {
     "ass": "~0.0.4",
