--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "semver": "~2.3.0",
     "js-yaml": "~2.1.3",
     "whet.extend": "~0.9.9",
-    "sax": "~0.6.0"
+    "sax": "~0.6.0",
+    "temp": "~0.8.1"
   },
   "devDependencies": {
     "ass": "~0.0.4",
