--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "request": "~2.34.0",
     "redis": "~0.10.1",
     "camp": "~13.11.9",
-    "semver": "~2.3.0"
+    "semver": "~2.3.0",
+    "bower": "~1.3.11"
   },
   "devDependencies": {
     "ass": "~0.0.6",
