--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "gh-badges",
   "version": "1.0.0",
   "description": "GitHub badges implemented in SVG.",
-  "keywords": ["GitHub", "badge", "SVG", "image"],
+  "keywords": [
+    "GitHub",
+    "badge",
+    "SVG",
+    "image"
+  ],
   "homepage": "http://shields.io",
   "bugs": {
     "url": "https://github.com/badges/shields/issues",
@@ -16,16 +21,17 @@
     "url": "https://github.com/espadrine/gh-badges"
   },
   "dependencies": {
-    "dot": "~1.0.2",
-    "svgo": "~0.4.2",
-    "canvas": "~1.1.2",
-    "phantomjs": "~1.9.2-6",
-    "es6-promise": "~0.1.1",
-    "request": "~2.34.0",
-    "redis": "~0.10.1",
+    "bower": "~1.3.11",
     "camp": "~13.11.9",
+    "canvas": "~1.1.2",
+    "dot": "~1.0.2",
+    "es6-promise": "~0.1.1",
+    "jshint": "^2.5.6",
+    "phantomjs": "~1.9.2-6",
+    "redis": "~0.10.1",
+    "request": "~2.34.0",
     "semver": "~2.3.0",
-    "bower": "~1.3.11"
+    "svgo": "~0.4.2"
   },
   "devDependencies": {
     "ass": "~0.0.6",
@@ -33,9 +39,11 @@
     "mocha": "~1.14.0"
   },
   "scripts": {
-    "test": "mocha -R spec test.js"
+    "test": "make test"
   },
-  "bin": { "badge": "./gh-badge.js" },
+  "bin": {
+    "badge": "./gh-badge.js"
+  },
   "files": [
     "badge.js",
     "README.md",
@@ -45,5 +53,7 @@
     "colorscheme.json",
     "phantomjs-svg2png.js"
   ],
-  "engines": { "node": "0.10.x" }
+  "engines": {
+    "node": "0.10.x"
+  }
 }
