--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redis": "~0.10.1",
     "camp": "~13.11.9",
     "semver": "~2.3.0",
-    "bower": "~1.3.11"
+    "bower": "~1.3.11",
+    "promise": "~6.1.0"
   },
   "devDependencies": {
     "ass": "~0.0.6",
