--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "camp": "~13.11.9",
     "semver": "~2.3.0",
     "bower": "~1.3.11",
-    "promise": "~6.1.0"
+    "promise": "~6.1.0",
+    "xml2js": "^0.4.5"
   },
   "devDependencies": {
     "ass": "~0.0.6",
