--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "gh-badges",
   "version": "1.1.0",
   "description": "GitHub badges implemented in SVG.",
-  "keywords": ["GitHub", "badge", "SVG", "image"],
+  "keywords": [
+    "GitHub",
+    "badge",
+    "SVG",
+    "image"
+  ],
   "homepage": "http://shields.io",
   "bugs": {
     "url": "https://github.com/badges/shields/issues",
@@ -30,13 +35,16 @@
   },
   "devDependencies": {
     "ass": "~0.0.6",
+    "mocha": "~1.14.0",
     "should": "~3.0.0",
-    "mocha": "~1.14.0"
+    "standard": "^3.6.1"
   },
   "scripts": {
-    "test": "mocha -R spec test.js"
+    "test": "standard && mocha -R spec test.js"
   },
-  "bin": { "badge": "./gh-badge.js" },
+  "bin": {
+    "badge": "./gh-badge.js"
+  },
   "files": [
     "badge.js",
     "README.md",
@@ -46,5 +54,7 @@
     "colorscheme.json",
     "phantomjs-svg2png.js"
   ],
-  "engines": { "node": "0.10.x" }
+  "engines": {
+    "node": "0.10.x"
+  }
 }
