--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-badges",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "GitHub badges implemented in SVG.",
   "keywords": ["GitHub", "badge", "SVG", "image"],
   "homepage": "http://shields.io",
@@ -44,7 +44,9 @@
     "templates",
     "svg-to-img.js",
     "colorscheme.json",
-    "phantomjs-svg2png.js"
+    "phantomjs-svg2png.js",
+    "lru-cache.js",
+    "logo"
   ],
   "engines": { "node": "0.10.x" }
 }
