--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "gh-badges",
   "version": "1.1.2",
   "description": "GitHub badges implemented in SVG.",
-  "keywords": ["GitHub", "badge", "SVG", "image"],
+  "keywords": [
+    "GitHub",
+    "badge",
+    "SVG",
+    "image"
+  ],
   "homepage": "http://shields.io",
   "bugs": {
     "url": "https://github.com/badges/shields/issues",
@@ -30,13 +35,18 @@
   },
   "devDependencies": {
     "ass": "~0.0.6",
-    "should": "~3.0.0",
-    "mocha": "~1.14.0"
+    "coveralls": "^2.11.6",
+    "istanbul": "^0.4.1",
+    "mocha": "~1.14.0",
+    "should": "~3.0.0"
   },
   "scripts": {
-    "test": "mocha -R spec test.js"
+    "test": "mocha -R spec test.js",
+    "coverage": "istanbul cover _mocha test.js; cat ./coverage/lcov.info | coveralls"
   },
-  "bin": { "badge": "./gh-badge.js" },
+  "bin": {
+    "badge": "./gh-badge.js"
+  },
   "files": [
     "badge.js",
     "README.md",
