--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,15 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++
       - g++-4.8
       - libcairo2-dev
       - libjpeg8-dev
       - libpango1.0-dev
       - libgif-dev
       - build-essential
+
+before_install:
+  - npm explore npm -g -- npm install node-gyp@latest
 
 env: CXX=g++-4.8
 
