Allow build failure on node 4/5 for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ node_js:
   - '4'
   - '5'
 
+matrix:
+  allow_failures:
+    - node_js: '4'
+    - node_js: '5'
+
 cache:
   directories:
     node_modules
