Transmit and save GitHub user tokens
Issue #529.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "semver": "~4.3.3",
     "bower": "~1.4.1",
     "promise": "~7.0.0",
-    "chrome-web-store-item-property": "^1.1.2"
+    "chrome-web-store-item-property": "^1.1.2",
+    "json-autosave": "~1.1.0"
   },
   "devDependencies": {
     "ass": "~0.0.6",
