--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-before_install:
-  - sudo apt-get update -myqq
-  - sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
 language: node_js
 node_js:
   - 6
@@ -16,3 +13,14 @@ notifications:
 
 git:
   depth: 10
+
+sudo: false
+
+addons:
+  apt:
+    packages:
+    - libcairo2-dev
+    - libjpeg8-dev
+    - libpango1.0-dev
+    - libgif-dev
+    - build-essential
