--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ Desktop.ini
 ._*
 Thumbs.db
 
+# eclipse
+.project
+.settings
+
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
