--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gh-badges",
-  "version": "1.2.2",
-  "description": "GitHub badges implemented in SVG.",
-  "keywords": ["GitHub", "badge", "SVG", "image"],
+  "version": "1.3.0",
+  "description": "Official Shields.io badge library.",
+  "keywords": ["GitHub", "badge", "SVG", "image", "shields.io"],
   "homepage": "http://shields.io",
   "bugs": {
     "url": "https://github.com/badges/shields/issues",
