--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "semver": "~5.3.0",
     "bower": "~1.7.9",
     "chrome-web-store-item-property": "^1.1.2",
-    "json-autosave": "~1.1.1"
+    "json-autosave": "~1.1.1",
+    "xml2js": "^0.4.17"
   },
   "scripts": {
     "test": "node test/test.js"
