--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,12 @@ language: node_js
 node_js:
   - 6
 
-branches:
-  only:
-    - master
-
 notifications:
   email:
-    - thaddee.tyl@gmail.com
-  irc: "irc.freenode.org#shields"
+    - kit.plummer@ionchannel.io
 
 git:
   depth: 10
+
+script:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
