--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ before_install:
   - sudo apt-get update -myqq
   - sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
 language: node_js
+
 node_js:
   - 6
 
@@ -13,4 +14,4 @@ git:
   depth: 10
 
 script:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
