Revert "not an array"
This reverts commit 28bc504644624f12a34ddb61e68aa4b576db8aaa.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ notifications:
 git:
   depth: 10
 
-script: if [ "$TRAVIS_BRANCH" == "master" ]; then curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
+script:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
