--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ git:
 
 deploy:
   provider: script
-  script: if [ "$TRAVIS_BRANCH" == "master" ]; then curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
+  script: 
+    - if [ "$TRAVIS_BRANCH" == "master" ]; then curl -X POST -H "Authorization: Bearer $APIKEY" -d '{"url":"git@github.com:ion-channel/shields.git", "project":"ionchannel/shields", "tag":"latest", "branch":"master", "deploy":"false"}' $DEPLOYURL; fi
   on:
     branch: master
