--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@ Thumbs.db
 .Spotlight-V100
 .Trashes
 
-# Docker env file containing secrets
-secret.env
+# Docker env configuration file
+shields.env
