--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "license": "CC0-1.0",
   "author": "Thaddée Tyl <thaddee.tyl@gmail.com>",
-  "main": "badge.js",
+  "main": "lib/badge.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/badges/shields"
@@ -44,14 +44,14 @@
     "badge": "./gh-badge.js"
   },
   "files": [
-    "badge.js",
     "README.md",
     "gh-badge.js",
-    "measure-text.js",
+    "lib/badge.js",
+    "lib/colorscheme.json",
+    "lib/lru-cache.js",
+    "lib/measure-text.js",
+    "lib/svg-to-img.js",
     "templates",
-    "svg-to-img.js",
-    "colorscheme.json",
-    "lru-cache.js",
     "logo"
   ],
   "devDependencies": {
