added soap dependency

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redis": "~2.6.2",
     "request": "~2.75.0",
     "semver": "~5.3.0",
+    "soap": "~0.18.0",
     "svgo": "~0.7.1",
     "xml2js": "~0.4.16"
   },
