Disallow variable redeclaration

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,3 +10,6 @@ rules:
   # We keep whitespace cleaned up.
   no-trailing-spaces: "error"
   eol-last: "error"
+
+  # Prevent some likely errors.
+  no-redeclare: "error"
