Disallow undefined variables

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,5 @@
 env:
+  node: true
   # We use Promise, Map, and occasional ES6 syntax.
   es6: true
 
@@ -13,3 +14,4 @@ rules:
 
   # Prevent some likely errors.
   no-redeclare: "error"
+  no-undef: "error"
