--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dot": "~1.0.3",
     "gm": "^1.23.0",
     "json-autosave": "~1.1.2",
+    "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
     "redis": "~2.6.2",
     "request": "~2.75.0",
