--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^3.18.0",
     "glob": "^7.1.1",
     "icedfrisby": "git+https://github.com/paulmelnikow/IcedFrisby.git#80e13f78a68fd0e7ea853a4439a4bba14533a7cb",
+    "lodash.uniq": "^4.5.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.11",
     "sinon": "^2.1.0"
