Add tutorial on writing vendor tests, first pass

--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "xml2js": "~0.4.16"
   },
   "scripts": {
-    "coverage:js": "istanbul cover _mocha 'test/**/*.spec.js' --dir coverage/js",
-    "coverage:vendor": "istanbul cover _mocha vendor/runner/runner.js --dir coverage/vendor",
-    "coverage": "npm run coverage:js && npm run coverage:vendor && istanbul report",
+    "coverage:test:js": "istanbul cover _mocha 'test/**/*.spec.js' --dir coverage/js",
+    "coverage:test:vendor": "istanbul cover _mocha vendor/runner/runner.js --dir coverage/vendor",
+    "coverage:test": "npm run coverage:test:js && npm run coverage:test:vendor",
+    "coverage:report": "istanbul report",
+    "coverage:report:reopen": "opn coverage/lcov-report/index.html",
+    "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint '**/*.js'",
     "test:js": "mocha 'test/**/*.spec.js'",
     "test:vendor": "mocha vendor/runner/runner.js",
@@ -69,6 +72,7 @@
     "lodash.uniq": "^4.5.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.13",
+    "opn-cli": "^3.1.0",
     "sinon": "^2.1.0"
   }
 }
