--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ node_js:
 script:
   - npm run lint
   - npm run test:js
-  - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:vendor -- --pr; fi
-  - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:vendor; fi
+  - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
+  - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services -- --pr; fi
 
 branches:
   except:
