Typo in shields.example.env

--- a/shields.example.env
+++ b/shields.example.env
@@ -15,5 +15,5 @@ GH_TOKEN=insert_token
 PORT=80
 BIND_ADDRESS=::
 
-# IP address of your Shields server. You may use your DNS here, but that's less secure
+# IP address of your Shields server. You may use DNS here instead of IP, but that's less secure
 SHIELDS_IP=insert_shields_ip
