--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "child-process-promise": "^2.2.1",
     "eslint": "^3.18.0",
     "glob": "^7.1.1",
+    "html-soup": "^1.1.1",
     "icedfrisby": "^1.2.0",
     "icedfrisby-nock": "^1.0.0",
     "is-png": "^1.1.0",
