--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pdfkit": "~0.8.0",
     "redis": "~2.6.2",
     "request": "~2.81.0",
+    "request-promise": "~4.2.1",
     "semver": "~5.3.0",
     "svgo": "~0.7.1",
     "xml2js": "~0.4.16"
