--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - 6
 
 before_script:
-  - echo "{\"gh_token\":\"$GITHUB_TOKEN\"}" > private/secret.json
+  - mkdir private && echo "{\"gh_token\":\"$GITHUB_TOKEN\"}" > private/secret.json
 
 script:
   - npm run lint
