Add support for sonatype nexus (#1017)
Close #783

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ Desktop.ini
 ._*
 Thumbs.db
 
+# eclipse
+.project
+.settings
+
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
