--- a/.eslintrc-preferred.yml
+++ b/.eslintrc-preferred.yml
@@ -2,6 +2,7 @@ rules:
   # From eslint-config-standard.
   arrow-spacing: ["error", { "before": true, "after": true }]
   brace-style: ["error", "1tbs", { "allowSingleLine": true }]
+  camelcase: ["error", { "properties": "never" }]
   func-style: ["error", "declaration", { "allowArrowFunctions": true }]
   indent: ["error", 2, { "SwitchCase": 1 }]
   key-spacing: ["error", { "beforeColon": false, "afterColon": true }]
