--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "camp": "~16.2.3",
     "chrome-web-store-item-property": "~1.1.2",
     "dot": "~1.0.3",
-    "pretty-bytes": "^3.0.1",
     "gm": "^1.23.0",
     "json-autosave": "~1.1.2",
+    "lodash.countby": "^4.6.0",
     "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
+    "pretty-bytes": "^3.0.1",
     "redis": "~2.6.2",
     "request": "~2.81.0",
     "semver": "~5.3.0",
