--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "pretty-bytes": "^3.0.1",
     "gm": "^1.23.0",
     "json-autosave": "~1.1.2",
+    "jsonpath": "^0.2.12",
     "pdfkit": "~0.8.0",
     "redis": "~2.6.2",
     "request": "~2.81.0",
     "semver": "~5.3.0",
     "svgo": "~0.7.1",
-    "xml2js": "~0.4.16",
-    "jsonpath": "^0.2.12"
+    "xml2js": "~0.4.16"
   },
   "scripts": {
     "coverage:test:js": "istanbul cover _mocha '*.spec.js' 'lib/*.spec.js' --dir coverage/js",
