--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "node-fetch": "^1.6.3",
     "opn-cli": "^3.1.0",
     "read-all-stdin-sync": "^1.0.5",
+    "semver-regex": "^1.0.0",
     "sinon": "^2.1.0"
   },
   "engines": {
