--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "pretty-bytes": "^3.0.1",
     "gm": "^1.23.0",
     "json-autosave": "~1.1.2",
-    "jsonpath": "^0.2.12",
+    "jsonpath": "~0.2.12",
     "pdfkit": "~0.8.0",
     "redis": "~2.6.2",
     "request": "~2.81.0",
