--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "opn-cli": "^3.1.0",
     "prettier": "1.7.3",
     "read-all-stdin-sync": "^1.0.5",
+    "semver-regex": "^1.0.0",
     "sinon": "^2.1.0"
   },
   "engines": {
