--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "xml2js": "~0.4.16"
   },
   "scripts": {
-    "coverage:test:js": "istanbul cover node_modules/mocha/bin/_mocha '*.spec.js' 'lib/*.spec.js' --dir coverage/js",
-    "coverage:test:services": "istanbul cover node_modules/mocha/bin/_mocha service-tests/runner/cli.js --dir coverage/services -- --delay",
-    "coverage:test": "npm run coverage:test:js && npm run coverage:test:services",
-    "coverage:report": "istanbul report",
+    "coverage:test:js": "nyc node_modules/mocha/bin/_mocha '*.spec.js' 'lib/*.spec.js'",
+    "coverage:test:services": "nyc node_modules/mocha/bin/_mocha --delay service-tests/runner/cli.js",
+    "coverage:test": "rimraf .nyc_output coverage; npm run coverage:test:js; npm run coverage:test:services",
+    "coverage:report": "nyc report",
     "coverage:report:reopen": "opn coverage/lcov-report/index.html",
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint '**/*.js'",
@@ -82,11 +82,11 @@
     "icedfrisby-nock": "^1.0.0",
     "is-png": "^1.1.0",
     "is-svg": "^2.1.0",
-    "istanbul": "^0.4.5",
     "lodash.difference": "^4.5.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.13",
     "node-fetch": "^1.6.3",
+    "nyc": "^11.2.1",
     "opn-cli": "^3.1.0",
     "prettier": "1.7.3",
     "read-all-stdin-sync": "^1.0.5",
