--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "lodash.countby": "^4.6.0",
     "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
-    "pretty-bytes": "^3.0.1",
+    "pretty-bytes": "^4.0.2",
     "redis": "~2.6.2",
-    "request": "~2.81.0",
-    "semver": "~5.3.0",
+    "request": "^2.83.0",
+    "semver": "^5.4.1",
     "svgo": "~0.7.1",
     "xml2js": "~0.4.16"
   },
