--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "is-svg": "^2.1.0",
     "istanbul": "^0.4.5",
     "lodash.difference": "^4.5.0",
+    "minimist": "^1.2.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.13",
     "node-fetch": "^1.6.3",
