--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
     "redis": "~2.6.2",
-    "request": "^2.83.0",
-    "semver": "^5.4.1",
+    "request": "~2.83.0",
+    "semver": "~5.4.1",
     "svgo": "~0.7.1",
     "xml2js": "~0.4.16"
   },
