--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: node_js
 node_js:
   - 6
 
+cache:
+  directories:
+    - $HOME/.npm
+
 before_script:
-  - npm install -g npm@5
+  - npm install -g npm@$(jq -r '.engines.npm' package.json)
   - mkdir private && echo "{\"gh_token\":\"$GITHUB_TOKEN\"}" > private/secret.json
 
 jobs:
