--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ script:
 jobs:
   include:
     - node_js: 8
-    - script:
+      script:
       - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
       - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services:pr; fi
     - node_js: 6
-    - script:
+      script:
       - if [ "$TRAVIS_EVENT_TYPE" == cron ]; then npm run test:services; fi
       - if [ "$TRAVIS_EVENT_TYPE" == pull_request ]; then npm run test:services:pr; fi
 
