--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "sinon": "^4.0.1"
   },
   "engines": {
-    "node": ">= 6"
+    "node": ">= 6",
+    "npm": ">= 5"
   },
   "babel": {
     "presets": [
