--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
+    "query-string": "^5.0.0",
     "redis": "~2.6.2",
     "request": "~2.83.0",
     "semver": "~5.4.1",
