--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.18.1",
     "pdfkit": "~0.8.0",
     "pretty-bytes": "^4.0.2",
+    "priorityqueuejs": "^1.0.0",
     "query-string": "^5.0.0",
     "redis": "~2.6.2",
     "request": "~2.83.0",
@@ -39,14 +40,14 @@
     "xml2js": "~0.4.16"
   },
   "scripts": {
-    "coverage:test:js": "nyc node_modules/mocha/bin/_mocha '*.spec.js' 'lib/*.spec.js'",
+    "coverage:test:js": "nyc node_modules/mocha/bin/_mocha '*.spec.js' 'lib/**/*.spec.js'",
     "coverage:test:services": "nyc node_modules/mocha/bin/_mocha --delay service-tests/runner/cli.js",
     "coverage:test": "rimraf .nyc_output coverage; npm run coverage:test:js; npm run coverage:test:services",
     "coverage:report": "nyc report",
     "coverage:report:reopen": "opn coverage/lcov-report/index.html",
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
     "lint": "eslint '**/*.js'",
-    "test:js": "mocha lib '*.spec.js'",
+    "test:js": "mocha 'lib/**/*.spec.js' '*.spec.js'",
     "test:services": "mocha --delay service-tests/runner/cli.js",
     "test:services:pr:prepare": "node service-tests/runner/pull-request-services-cli.js > pull-request-services.log",
     "test:services:pr:run": "mocha --delay service-tests/runner/cli.js --stdin < pull-request-services.log",
@@ -92,6 +93,7 @@
     "is-png": "^1.1.0",
     "is-svg": "^2.1.0",
     "lodash.difference": "^4.5.0",
+    "lodash.times": "^4.3.2",
     "minimist": "^1.2.0",
     "mocha": "^4.0.1",
     "nock": "^9.0.13",
