--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     },
     "NPM_CONFIG_PRODUCTION": {
       "description": "Configure whether devDependencies are installed (they are needed for the build).",
-      "value": true
+      "value": false
     }
   },
   "formation": {
