Move this transform back into the makefile
- It’s portable and tested, and sed in the package.json is not

--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "test": "npm run lint && npm run test:js",
     "prebuild": "mkdirp build",
     "build:examples": "node_modules/.bin/babel-node frontend/render-badge-examples",
-    "build:concat": "cat frontend/fragments/try-header.html build/badge-examples-fragment.html frontend/fragments/try-footer.html > build/concat.html",
-    "build": "npm run build:examples && npm run build:concat && cp build/concat.html index.html",
-    "build:production:transform": "sed -e \"s,<span id='imgUrlPrefix'>,&https://img.shields.io,\" -e \"s,var origin = '';,var origin = 'https://img.shields.io';,\" build/concat.html > index.html",
-    "build:production": "PRODUCTION_BUILD=true npm run build:examples && npm run build:concat && npm run build:production:transform",
+    "build:copy-fragments": "cp frontend/fragments/try-header.html frontend/fragments/try-footer.html build/",
+    "build:concat": "cat build/try-header.html build/badge-examples-fragment.html build/try-footer.html > index.html",
+    "build": "npm run build:examples && npm run build:copy-fragments && npm run build:concat",
+    "build:production": "PRODUCTION_BUILD=true npm run build:examples && npm run build:copy-fragments && make footer-production-transform && npm run build:concat",
     "heroku-postbuild": "npm run build",
     "start": "INFOSITE=/ node server 8080 ::"
   },
