--- a/app.json
+++ b/app.json
@@ -10,7 +10,16 @@
   "website": "https://shields.io/",
   "repository": "https://github.com/badges/shields",
   "logo": "http://shields.io/favicon.png",
-  "success_url": "/try.html",
+  "env": {
+    "INFOSITE": {
+      "description": "The home page.",
+      "value": "/"
+    },
+    "NPM_CONFIG_PRODUCTION": {
+      "description": "Configure whether devDependencies are installed (they are needed for the build).",
+      "value": "false"
+    }
+  },
   "formation": {
     "web": {
       "quantity": 1,
