Fix Herkou staging deploy
- Dangerous semver range (>) in engines.node
https://devcenter.heroku.com/articles/nodejs-support#specifying-a-node-js-version

--- a/package.json
+++ b/package.json
@@ -117,8 +117,8 @@
     "whatwg-url": "^6.3.0"
   },
   "engines": {
-    "node": ">= 6",
-    "npm": ">= 5"
+    "node": "6.x",
+    "npm": "5.x"
   },
   "babel": {
     "presets": [
