Use sazerac for our data-driven tests

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "react-dom": "^16.0.0",
     "read-all-stdin-sync": "^1.0.5",
     "rimraf": "^2.6.2",
+    "sazerac": "^0.4.1",
     "semver-regex": "^1.0.0",
     "sinon": "^4.0.1",
     "whatwg-url": "^6.3.0"
