--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "license": "CC0-1.0",
   "author": "Thaddée Tyl <thaddee.tyl@gmail.com>",
-  "main": "lib/badge.js",
+  "main": "lib/make-badge.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/badges/shields"
@@ -67,7 +67,7 @@
   "files": [
     "README.md",
     "lib/badge-cli.js",
-    "lib/badge.js",
+    "lib/make-badge.js",
     "lib/colorscheme.json",
     "lib/lru-cache.js",
     "lib/measure-text.js",
